--- a/BasicFlaskTemplate/BasicFlaskTemplate/templates/index.html
+++ b/BasicFlaskTemplate/BasicFlaskTemplate/templates/index.html
@@ -2,33 +2,20 @@
 
 {% block content %}
 
-<div class="jumbotron">
-    <h1>Flask</h1>
-    <p>Martin Was here 2022</p>
-    <p class="lead">Flask is a free web framework for building great Web sites and Web applications using HTML, CSS and JavaScript.</p>
-    <p><a href="http://flask.pocoo.org/" class="btn btn-primary btn-large">Learn more &raquo;</a></p>
-</div>
+<h2>{{ title }}</h2>
+<h3>{{ message }}</h3>
 
-<div class="row">
-    <div class="col-md-4">
-        <h2>Getting started</h2>
-        <p>
-            Flask gives you a powerful, patterns-based way to build dynamic websites that
-            enables a clean separation of concerns and gives you full control over markup
-            for enjoyable, agile development.
-        </p>
-        <p><a class="btn btn-default" href="http://flask.pocoo.org/docs/">Learn more &raquo;</a></p>
-    </div>
-    <div class="col-md-4">
-        <h2>Get more libraries</h2>
-        <p>The Python Package Index is a repository of software for the Python programming language.</p>
-        <p><a class="btn btn-default" href="https://pypi.python.org/pypi">Learn more &raquo;</a></p>
-    </div>
-    <div class="col-md-4">
-        <h2>Microsoft Azure</h2>
-        <p>You can easily publish to Microsoft Azure using Visual Studio. Find out how you can host your application using a free trial today.</p>
-        <p><a class="btn btn-default" href="http://azure.microsoft.com">Learn more &raquo;</a></p>
-    </div>
-</div>
+<form action="/uploader" method="POST"
+      enctype="multipart/form-data">
+    <input type="file" name="file" />
+    <input type="submit" />
+</form>
 
+<img src="{{ provided_image }}" alt="provided image" />
+
+<!--
+
+    <img src="/static/uploads/cloud.png"/>
+
+-->
 {% endblock %}
