Updated code to reflect requirements
Graph update to bar with labels
Removed obscure code
Added comments
Limited file input types to Jpg and png
Renamed test page to results

--- a/BasicFlaskTemplate/BasicFlaskTemplate/templates/index.html
+++ b/BasicFlaskTemplate/BasicFlaskTemplate/templates/index.html
@@ -9,7 +9,7 @@
       enctype="multipart/form-data">
     <div class="container">
         <div class="row">
-            <div class="col-sm-6"><label for="fileinput1">Select Image</label><input class="form-control-file" type="file" name="file" value="Select Image" id="fileinput1"/></div>
+            <div class="col-sm-6"><label for="fileinput1">Select Image</label><input class="form-control-file" type="file" name="file" value="Select Image" id="fileinput1" accept="image/png, image/jpeg"/></div>
             <div class="col-sm-6"><input class="btn btn-primary" type="submit" value="Process File" /></div>
         </div>
     </div>
